# discretum

./: .gitignore  CHECKLIST.md  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_evolution.cpp  bench_gpu_vs_cpu.cpp  bench_ollivier.cpp
configs/: default.toml  search_4d_fast.json  search_4d_fast_cmaes.json  search_4d_flat.json  search_4d_flat_cmaes.json  search_4d_v3.json  search_4d_v3_cmaes.json
data/checkpoints/4d_fast_cmaes/: best_params.json  cmaes_checkpoint.json  cmaes_result.json
data/checkpoints/4d_fast_ga/: best_params.json  ga_checkpoint.json  ga_result.json
data/results/: 4d_v2rule_v3fitness_diag.json  4d_v3_cmaes_ensemble.json  4d_v3_cmaes_single_diag.json  4d_v3_ensemble_diag.json  4d_v3_ga_ensemble.json  4d_v3_ga_single_diag.json  baseline_4d_L5.json  best_4d_v3_cmaes_rule.json  best_4d_v3_rule.json  best_rule_4d_v3.json  v2_best_seed.json
data/results/4d_campaign/: fast_cmaes_ensemble.json  fast_ga_ensemble.json
data/results/calibration_3d/: L10.json  L11.json  L12.json  L5.json  L6.json  L7.json  L8.json  L9.json  baseline.json
data/results/calibration_4d/: L4.json  L5.json  L6.json  L7.json  L8.json  baseline.json
data/results/campaign1/: ga_diag.json
data/results/campaign2/: cmaes_diag.json  cmaes_diag_full.json  ga_diag.json
data/results/campaign2/scaling/: ga_size_10.json  ga_size_12.json  ga_size_15.json  ga_size_5.json  ga_size_8.json
data/results/curvature_analysis/: curvature_trends.json
data/results/diagnostics/: cmaes_diag.json  ga_diag.json
data/results/scaling_4d_v3/: baseline_L4.json  baseline_L5.json  baseline_L6.json  baseline_L7.json  baseline_L8.json  check_ds_bare_L4.json  check_ds_bare_L5.json  check_ds_bare_L6.json  check_ds_bare_L7.json  check_ds_bare_L8.json  evolved_L4.json  evolved_L5.json  evolved_L6.json  evolved_L7.json  evolved_L8.json  extrapolation.json  scaling_summary.json  spectral_baseline_L5.json  spectral_evolved_L5.json
data/results/scaling_analysis/: scaling_results.json
docs/: cdt_comparison.md
paper/: cover_letter.tex  discretum.out  discretum.tex  references.bib
scripts/: reproduce.sh
scripts/analysis/: collect_scaling.py  curvature_trends.py  debug_volume_growth.py  diagnose_results.py  diagnose_spectral.py  extrapolation.py  finite_size_scaling.py  paper_figures.py  paper_figures_final.py  paper_figures_v2.py  rule_geometry_correlation.py  spectral_multiscale.py  spectral_multiscale_plot.py
scripts/run/: run_scaling.sh
src/: main_calibrate.cpp  main_diagnose.cpp  main_search.cpp  main_validate.cpp
src/automaton/: evolution.cpp  evolution.hpp  rule_parametric.cpp  rule_parametric.hpp
src/core/: graph.cpp  graph.hpp
src/geometry/: geodesic.cpp  geodesic.hpp  metric_tensor.cpp  metric_tensor.hpp  ollivier_ricci.cpp  ollivier_ricci.hpp  spectral_dimension.cpp  spectral_dimension.hpp
src/gpu/: hip_graph_evolve.hip  hip_ollivier.hip  hip_random_walk.hip  hip_utils.hip
src/search/: cmaes.cpp  cmaes.hpp  ensemble.cpp  ensemble.hpp  fitness.cpp  fitness.hpp  genetic.cpp  genetic.hpp
src/utils/: config.hpp  io.hpp  logging.hpp  random.hpp  timer.hpp
tests/: test_evolution.cpp  test_fitness.cpp  test_geometry.cpp  test_gpu_kernels.cpp  test_graph.cpp  test_ollivier_ricci.cpp  test_spectral_dimension.cpp
